# temp

./: .clang-format  .gitignore  CMakeLists.txt  build-scripts.sh  ios.toolchain.cmake
CSharpLibrary.framework/: CSharpLibrary  Info.plist
build-ios/: 2dshader_frag.spv  2dshader_vert.spv  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
build-ios/CMakeScripts/: ReRunCMake.make
build-ios/Debug-iphoneos/EntropyApp.app/: 2dshader_frag.spv  2dshader_vert.spv  EntropyApp  Info.plist  embedded.mobileprovision  icon.icns
build-ios/Debug-iphoneos/EntropyApp.app.dSYM/Contents/: Info.plist
build-ios/Debug-iphoneos/EntropyApp.app.dSYM/Contents/Resources/DWARF/: EntropyApp
build-ios/Debug-iphoneos/EntropyApp.app.dSYM/Contents/Resources/Relocations/aarch64/: EntropyApp.yml
build-ios/Debug-iphoneos/EntropyApp.app/Frameworks/CSharpLibrary.framework/: CSharpLibrary
build-ios/Debug-iphoneos/EntropyApp.app/Frameworks/CSharpLibrary.framework/_CodeSignature/: CodeResources
build-ios/Debug-iphoneos/EntropyApp.app/_CodeSignature/: CodeResources
build-ios/Entropy/: cmake_install.cmake
build-ios/Entropy/CMakeScripts/: ReRunCMake.make
build-ios/Entropy/Debug-iphoneos/libEntropy.dylib.dSYM/Contents/: Info.plist
build-ios/Entropy/Debug-iphoneos/libEntropy.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libEntropy.dylib.yml
build-ios/Entropy/Entropy.xcodeproj/: project.pbxproj
build-ios/EntropyApp.xcodeproj/: project.pbxproj
build-ios/EntropyApp.xcodeproj/project.xcworkspace/xcuserdata/joakimwennergren.xcuserdatad/: UserInterfaceState.xcuserstate
build-ios/EntropyApp.xcodeproj/xcshareddata/xcschemes/: ALL_BUILD.xcscheme  EntropyApp.xcscheme  ZERO_CHECK.xcscheme  install.xcscheme  package.xcscheme
csharp_old/: CSharpLibrary.csproj
csharp_old/src/: Main.cs
csharp_old/src/Controllers/: IController.cs  MovementController.cs
csharp_old/src/Levels/: BaseLevel.cs  Level1.cs
csharp_old/src/Systems/: LeafSystem.cs  MusroomSpawner.cxx
dotnet/hostbridge/: HostBridge.cs  HostBridge.csproj  ScriptLoadContext.cs
dotnet/shared-interfaces/: IGameScript.cs  NativeBindings.cs  SharedInterfaces.csproj
dotnet/shared-interfaces/ecs/: Entity.cs
dotnet/shared-interfaces/ecs/Components/: Color.cs  Dimension.cs  IComponent.cs  Position.cs  Rotation.cs  Texture.cs
gamescripts/: GameScript.csproj  Sprite.cs
ios/: AppDelegate.mm  LaunchScreen.storyboard  SceneDelegate.mm  UI_old.swift  ViewController.h  ViewController.mm  info.plist  main.mm
scripts/: CSharpLibrary.csproj  publish-native-aot.sh
scripts/src/Containers/: World.cs
scripts/src/Controllers/: MovementController.cs
scripts/src/Objects/: Mushroom.cxx
src/: main.cpp
tmp-project/_save/Levels/: Level1.cs
tmp-project/_save/Objects/: Mushroom.cs
tmp-project/_save/Systems/: LeafSystem.cs
tmp-project/csharp/: CSharpLibrary.csproj
tmp-project/csharp/src/: Main.cs  PhysicsTestScript.cs
tmp-project/csharp/src/Easing/: Easing.cs
tmp-project/csharp/src/Levels/: BaseLevel.cs  Level1.cs
tmp-project/csharp/src/Objects/: Mushroom.cs
tmp-project/csharp/src/Systems/: MusroomSpawner.cs
tmp-project/gamescripts/: GameScripts.csproj  Move.cs
